# vekt

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html
tgit_cli/src/: main.rs
tgit_core/src/: remote.rs
vekt_cli/: Cargo.toml
vekt_cli/src/: main.rs
vekt_core/: Cargo.toml
vekt_core/src/: blobs.rs  compression.rs  diff.rs  errors.rs  gc.rs  lib.rs  remote.rs  storage.rs  utils.rs  validation.rs
vekt_core/tests/: basic_tests.rs  error_tests.rs  integration_tests.rs  restore_tests.rs
