[package]
name = "vekt"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Point to the local library folder
vekt_core = { path = "../vekt_core" }

clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
