[package]
name = "vekt_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Memory Mapping (Zero-copy reading)
memmap2 = "0.7"
# JSON Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# High-Performance Hashing
blake3 = { version = "1.5", features = ["rayon"] }
# Parallelism
rayon = "1.8"
# Error Handling
thiserror = "1.0"
# Hex encoding
hex = "0.4"
tokio = "1.48.0"
rust-s3 = "0.37.1"
# Preserving insertion order for maps
indexmap = { version = "2.1", features = ["serde"] }
futures = "0.3.31"
# Compression
zstd = "0.13"
# For testing
rand = { version = "0.8", optional = true }

[dev-dependencies]
rand = "0.8"

